fix: remove scrollbar for tablet and mobile

--- a/src/widgets/ContactModal/ui/contact-modal.scss
+++ b/src/widgets/ContactModal/ui/contact-modal.scss
@@ -30,6 +30,10 @@
 @media screen and (max-width: $desktop-sm) {
   .contact-modal__container {
     width: 100%;
+
+    &::-webkit-scrollbar {
+      width: 0;
+    }
   }
 }
 
